--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <body>
     <div id="root"></div>
     <script type="text/babel">
-     
+      const Welcome=()=><h1 className="message">Hello world!!</h1>
+      ReactDOM.render(<Welcome/>,document.getElementById("root"))
     </script>
   </body>
 </html>
